Merged revisions 76577 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

................
  r76577 | mark.dickinson | 2009-11-28 16:38:16 +0000 (Sat, 28 Nov 2009) | 12 lines

  Merged revisions 76575 via svnmerge from
  svn+ssh://pythondev@svn.python.org/python/trunk

  ........
    r76575 | mark.dickinson | 2009-11-28 16:32:27 +0000 (Sat, 28 Nov 2009) | 5 lines

    Issue #1678380: When distinguishing between -0.0 and 0.0 in
    compiler_add_o, use copysign instead of examining the first and last
    bytes of the double.  The latter method fails for little-endian
    ARM, OABI, where doubles are little-endian but with the words swapped.
  ........
................